scribble-test/src/test/resources/good/syntax/disamb/imports/pack1/Test4.scr
module good.syntax.disamb.imports.pack1.Test4;


global protocol Proto4(role C, role D)
{
	4() from C to D;
}

