scribble-test/src/test/resources/bad/syntax/disamb/modules/pack1/Foo2.scr
module bad.syntax.disamb.modules.pack1.Foo2;


global protocol Proto(role A, role B)
{
	2() from A to B;
}
